# abba

./: .gitignore  README.md  banksim.ipynb  dataexample.ipynb  example.py  pyproject.toml
abba/: __init__.py  model.py
abba/agent/: __init__.py  bank.py  ibloan.py  loan.py  saver.py
abba/logic/: f1_init_market.py  f2_eval_solvency.py  f3_second_round_effect.py  f4_optimize_risk_weight.py  f5_pay_dividends.py  f6_expand_loan_book.py  f7_eval_liquidity.py
