[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abba"
version = "0.1.0"
description = 'Agent-based model of interloan banking'
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Dave Bryson", email = "davebryson@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "matplotlib>=3.9.0",
  "mesa>=2.3.0",
  "jupyter>=1.0.0",
  "networkx[default]",
  "seaborn",
  "tqdm",
]

[project.urls]
Source = "https://github.com/simular-fi/abba"
Issues = "https://github.com/simular-fi/abba/issues"
Documentation = "https://github.com/simular-fi/abba#README.md"


[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
